# api_analyse_sentiments

./: .env.example  .gitignore  README.md  app.py  db.py  docker-compose.yml  main.py  pyproject.toml  train_model.py
db/init/: 01_schema.sql  02_seed_data.sql
scripts/: crontab.example  install_cron.sh  retrain.sh
static/: openapi.yaml
