[project]
name = "api-analyse-sentiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-swagger-ui>=5.32.8",
    "joblib>=1.4",
    "matplotlib>=3.9",
    "pymysql>=1.1",
    "python-dotenv>=1.0",
    "scikit-learn>=1.5",
]
